deleted the already made row class in layout.css and changed method for adding objectData into the array. instead of the push method, which pushes it to the end, used unshift method which pushes to the beginning of the array. completed issue-1-create-an-entry.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,6 @@ header {
   background-color: #4c2373;
 }
 
-.row {
-  display: flex;
-}
-
 .header h2 {
   font-weight: 600;
   color: white;
